--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 		
 		<link href="./app/immutable/assets/0.DZBR1jMD.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.CQXlbH2u.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.CvE4jEEu.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CRhV-jQ7.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Bnu5lpHu.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.C2Sxcv-3.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.BS-lcPPh.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CNknVEZz.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.Da_Phvau.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DvKFiRKx.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BqnFQQKb.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.1JQ-7iCb.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DeUTmFX0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.CL-8I0uF.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.CkoRIQkm.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.Bhs3uhor.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CB3wZm_5.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.BcRiH1Zd.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.Dj9TNcYC.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.BFuh9Uup.js"><!--[--><meta name="description" content="Svelte demo app"><!--]--><title>Home</title>
+		<link rel="modulepreload" href="./app/immutable/nodes/2.DTmuivku.js"><!--[--><meta name="description" content="Svelte demo app"><!--]--><title>Home</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-18u5iow"><header class="svelte-71wz18"><div class="corner svelte-71wz18"><a href="./" class="svelte-71wz18"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" class="svelte-71wz18"></a></div> <div class="corner svelte-71wz18"><br></div> <div class="w3-sidebar w3-bar-block w3-large" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-71wz18" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./" class="w3-bar-item w3-button svelte-71wz18" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></header><!----> <main class="svelte-18u5iow"><!----><div class="top-area"><h1>Shaping the <b>Future</b> of <b>DeFi</b></h1> <span>with Data and AI</span></div> <div><section class="graphic svelte-z6af01" style="pointer-events: none;"><img class="overlay svelte-z6af01" alt="alt" src="/alparslan-labs.github.io/app/immutable/assets/nnetfast.DPQSJnhg.gif" draggable="false" style="width:280px; height:auto;"> <img src="/alparslan-labs.github.io/app/immutable/assets/hyperplane.GoUR1R6B.gif" alt="alt" style="width:280px; height:auto;" class="svelte-z6af01"></section> <br></div> <svg width="200" height="50"><rect id="box" x="0" y="0" width="100" height="20" class="svelte-z6af01"></rect><text x="110" y="15" font-size="14" fill="white">About</text></svg> <section class="svelte-z6af01"><div class="text-column"><div><h3>Embrace the change</h3> <p>The continuous stream of emerging technologies challenges both investors and
@@ -57,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_csvvp6 = {
+					__sveltekit_ydd5vd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -65,8 +65,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.CvE4jEEu.js"),
-						import("./app/immutable/entry/app.BqnFQQKb.js")
+						import("./app/immutable/entry/start.Bnu5lpHu.js"),
+						import("./app/immutable/entry/app.1JQ-7iCb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
