--- a/404.html
+++ b/404.html
@@ -8,12 +8,12 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Bnu5lpHu.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C2Sxcv-3.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Cj4Jn2FZ.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.CzLt1sYS.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.BS-lcPPh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.Da_Phvau.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.kVl3qW6r.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DvKFiRKx.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.1JQ-7iCb.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.D5iHYoUa.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DeUTmFX0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.CL-8I0uF.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.CkoRIQkm.js">
@@ -22,7 +22,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ydd5vd = {
+					__sveltekit_ytt06w = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.Bnu5lpHu.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.1JQ-7iCb.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.Cj4Jn2FZ.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.D5iHYoUa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
