--- a/404.html
+++ b/404.html
@@ -8,12 +8,12 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.lsztuF_z.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.DoAYe6wF.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Dc5xVU_Q.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C-gXVFSx.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.BS-lcPPh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.Brk91sCK.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.B7tx4QE7.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DvKFiRKx.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.C4ch30wG.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.CUcLI1cR.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DeUTmFX0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.CL-8I0uF.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.CkoRIQkm.js">
@@ -22,7 +22,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1gd8nu8 = {
+					__sveltekit_1mxv1q0 = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.lsztuF_z.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.C4ch30wG.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.Dc5xVU_Q.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.CUcLI1cR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
