--- a/404.html
+++ b/404.html
@@ -8,12 +8,12 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.ZADQtmyI.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.Dccjq1Yz.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.C4VhR2Ic.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.2MvdBnnM.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.BS-lcPPh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.Df6T7itk.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.-_yjnLtC.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DvKFiRKx.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.RIPsGFhS.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.CKRRdzK-.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DeUTmFX0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.CL-8I0uF.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.CkoRIQkm.js">
@@ -22,7 +22,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1rkjrob = {
+					__sveltekit_85iezi = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.ZADQtmyI.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.RIPsGFhS.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.C4VhR2Ic.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.CKRRdzK-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
