--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
 		
 		<link href="./app/immutable/assets/0.DZBR1jMD.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.CQXlbH2u.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.ZADQtmyI.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.Dccjq1Yz.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.C4VhR2Ic.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.2MvdBnnM.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.BS-lcPPh.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.Df6T7itk.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.-_yjnLtC.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DvKFiRKx.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.RIPsGFhS.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.CKRRdzK-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DeUTmFX0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.CL-8I0uF.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.CkoRIQkm.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CjZ0Yjd7.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.DzYSzw6u.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.BcRiH1Zd.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.Dj9TNcYC.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.Dyh3VLXz.js"><!--[--><meta name="description" content="Svelte demo app"><!--]--><title>Home</title>
+		<link rel="modulepreload" href="./app/immutable/nodes/2.BjsyN7RB.js"><!--[--><meta name="description" content="Svelte demo app"><!--]--><title>Home</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-18u5iow"><header class="svelte-71wz18"><div class="corner svelte-71wz18"><a href="./" class="svelte-71wz18"><img src="https://res.cloudinary.com/dzbgtn2tn/image/upload/v1736051011/eagle_uh2q9b.png" alt="Seljuq" class="svelte-71wz18"></a></div> <div class="corner svelte-71wz18"><br></div> <div class="w3-sidebar w3-bar-block w3-large" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-71wz18" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./" class="w3-bar-item w3-button svelte-71wz18" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></header><!----> <main class="svelte-18u5iow"><!----><div class="top-area"><h1>Shaping the <b>Future</b> of <b>DeFi</b></h1> <span>with Data and AI</span></div> <div><section class="graphic svelte-z6af01" style="pointer-events: none;"><img class="overlay svelte-z6af01" alt="alt" src="/alparslan-labs.github.io/app/immutable/assets/nnetfast.DPQSJnhg.gif" draggable="false" style="width:280px; height:auto;"> <img src="/alparslan-labs.github.io/app/immutable/assets/hyperplane.GoUR1R6B.gif" alt="alt" style="width:280px; height:auto;" class="svelte-z6af01"></section> <br></div> <svg width="200" height="50"><rect id="box" x="0" y="0" width="100" height="20" class="svelte-z6af01"></rect><text x="110" y="15" font-size="14" fill="white">About</text></svg> <section class="svelte-z6af01"><div class="text-column"><div><h3>Analytics at your fingertips</h3> <p>The continuous stream of emerging technologies challenges both investors and
+		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-18u5iow"><header class="svelte-71wz18"><div class="corner svelte-71wz18"><a href="./" class="svelte-71wz18"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" class="svelte-71wz18"></a></div> <div class="corner svelte-71wz18"><br></div> <div class="w3-sidebar w3-bar-block w3-large" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-71wz18" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./" class="w3-bar-item w3-button svelte-71wz18" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-71wz18" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></header><!----> <main class="svelte-18u5iow"><!----><div class="top-area"><h1>Shaping the <b>Future</b> of <b>DeFi</b></h1> <span>with Data and AI</span></div> <div><section class="graphic svelte-z6af01" style="pointer-events: none;"><img class="overlay svelte-z6af01" alt="alt" src="/alparslan-labs.github.io/app/immutable/assets/nnetfast.DPQSJnhg.gif" draggable="false" style="width:280px; height:auto;"> <img src="/alparslan-labs.github.io/app/immutable/assets/hyperplane.GoUR1R6B.gif" alt="alt" style="width:280px; height:auto;" class="svelte-z6af01"></section> <br></div> <svg width="200" height="50"><rect id="box" x="0" y="0" width="100" height="20" class="svelte-z6af01"></rect><text x="110" y="15" font-size="14" fill="white">About</text></svg> <section class="svelte-z6af01"><div class="text-column"><div><h3>Analytics at your fingertips</h3> <p>The continuous stream of emerging technologies challenges both investors and
                 regulators rethink establish conventions. 
                 In a game of survival the needs of of adopting new ways to mee
                 by a of innovations aiming to disrupt the underlying 
                 infrastructure modern economies rely on. 
                 In this process, laymen are left behind.</p><p>XYZ help its customers to navigate dynamic market environments. We
                 push/adopt state-of-the art technologies to the limit and latest 
-                frontiers scientific research.</p></div></div></section> <img class="zoom svelte-z6af01" src="alparslan-labs.github.io/app/immutable/assets/hand-analytics.BSYqeFZX.png" alt="alt" style="width:450px; height:auto;"> <svg width="200" height="50"><rect id="box" x="0" y="0" width="100" height="20" class="svelte-z6af01"></rect><text x="110" y="15" font-size="14" fill="white">Solutions</text></svg> <section class="svelte-z6af01"><div class="text-column"><div><h3>Unlock Investment Intelligence</h3> <p>An investment analytics platform equipping investors with modern analytics for the digital age. 
+                frontiers scientific research.</p></div></div></section> <img class="zoom svelte-z6af01" src="/alparslan-labs.github.io/app/immutable/assets/hand-analytics.BSYqeFZX.png" alt="alt" style="width:450px; height:auto;"> <svg width="200" height="50"><rect id="box" x="0" y="0" width="100" height="20" class="svelte-z6af01"></rect><text x="110" y="15" font-size="14" fill="white">Solutions</text></svg> <section class="svelte-z6af01"><div class="text-column"><div><h3>Unlock Investment Intelligence</h3> <p>An investment analytics platform equipping investors with modern analytics for the digital age. 
                 It spans toolkits for asset selection, portfolio optimization and strategy development. 
                 HARP makes use of state-of-the-art algorithms enabling models with enhanced returns and
                 limited risk. It is characterized by diversificaiton and robust out-of-sample performance
@@ -44,7 +44,7 @@
 
 				edge</p></div></div></section> <svg width="200" height="50"><rect id="box" x="0" y="0" width="100" height="20" class="svelte-z6af01"></rect><text x="110" y="15" font-size="14" fill="white">Products</text></svg> <section class="svelte-z6af01"><div class="text-column"><table><tbody><tr><td><h4>HARP</h4> <p>Step up your game with data and AI. HARP is an asset management platform 
                                 equipping investors for the digital age. with modern analytics  
-                            jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</p></td><td><img class="zoom svelte-z6af01" src="alparslan-labs.github.io/app/immutable/assets/logo-desktop.COT0JCsF.png" alt="alt" draggable="false" style="width:200px; height:auto; pointer-events: none;"></td></tr><tr><td><img class="zoom svelte-z6af01" src="alparslan-labs.github.io/app/immutable/assets/code.DKUsips5.gif" alt="alt" draggable="false" style="width:200px; height:auto;"></td><td><h4>QADR</h4> <p>A solution for asset managers to eliminate the hassle of time consuming manual labor
+                            jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</p></td><td><img class="zoom svelte-z6af01" src="/alparslan-labs.github.io/app/immutable/assets/logo-desktop.COT0JCsF.png" alt="alt" draggable="false" style="width:200px; height:auto; pointer-events: none;"></td></tr><tr><td><img class="zoom svelte-z6af01" src="/alparslan-labs.github.io/app/immutable/assets/code.DKUsips5.gif" alt="alt" draggable="false" style="width:200px; height:auto;"></td><td><h4>QADR</h4> <p>A solution for asset managers to eliminate the hassle of time consuming manual labor
 							in quantitative research. Build systematic trading systems with a handful of lines of code. 
 
 								convenient performant</p></td></tr></tbody></table></div></section> <svg width="200" height="50"><rect id="box" x="0" y="0" width="100" height="20" class="svelte-z6af01"></rect><text x="110" y="15" font-size="14" fill="white">Access</text></svg> <section class="svelte-z6af01"><div class="text-column"><div><h3>Get in Touch</h3> <p>Join the waiting list to gain early access.
@@ -57,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_1rkjrob = {
+					__sveltekit_85iezi = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -65,8 +65,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.ZADQtmyI.js"),
-						import("./app/immutable/entry/app.RIPsGFhS.js")
+						import("./app/immutable/entry/start.C4VhR2Ic.js"),
+						import("./app/immutable/entry/app.CKRRdzK-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
