--- a/404.html
+++ b/404.html
@@ -8,12 +8,12 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.BsAljs4c.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.YQzsyxm_.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.DvReGte-.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.DbHzccYR.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.BS-lcPPh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.D6TjH4n9.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.C5eb2p_g.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DvKFiRKx.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.BlDvXXcl.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.CT0_7ho4.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DeUTmFX0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.CL-8I0uF.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.CkoRIQkm.js">
@@ -22,7 +22,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1drovtm = {
+					__sveltekit_oofrmc = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.BsAljs4c.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.BlDvXXcl.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.DvReGte-.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.CT0_7ho4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
