--- a/404.html
+++ b/404.html
@@ -8,21 +8,21 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.D_LSPd9V.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.Bnc4dg3s.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.BS-lcPPh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.DRV1e2RB.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DvKFiRKx.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.DG8C_gew.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DeUTmFX0.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.CL-8I0uF.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.CkoRIQkm.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Dlb2mslq.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BNNyounA.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.ChELR0fC.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.B0sGhhJ5.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.FHV3Hsq_.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.C6UP7vcu.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.MhxeQKOt.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.BODz-TJf.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.B2yMix-o.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_cgd8wp = {
+					__sveltekit_x4rphw = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.D_LSPd9V.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.DG8C_gew.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.Dlb2mslq.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.C6UP7vcu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
