--- a/404.html
+++ b/404.html
@@ -8,21 +8,21 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Dlb2mslq.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BNNyounA.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.ChELR0fC.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.B0sGhhJ5.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.FHV3Hsq_.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.C6UP7vcu.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.MhxeQKOt.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.BODz-TJf.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.B2yMix-o.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.BV2RXf8a.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BQilnbet.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.Bqgw9XGh.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.CQdj9SBt.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.CZo4A-g6.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.DhpPJKPi.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.Gtf1Dow8.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.0XGkgD3B.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.BdKW9F2k.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_x4rphw = {
+					__sveltekit_9mjocw = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.Dlb2mslq.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.C6UP7vcu.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.BV2RXf8a.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.DhpPJKPi.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
