--- a/404.html
+++ b/404.html
@@ -8,12 +8,12 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.BV2RXf8a.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BQilnbet.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.BxaxoGM0.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.CjBVdPNf.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.Bqgw9XGh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.CQdj9SBt.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.bsaCWKyC.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.CZo4A-g6.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.DhpPJKPi.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.DYd4LyFj.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.Gtf1Dow8.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.0XGkgD3B.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.BdKW9F2k.js">
@@ -22,7 +22,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_9mjocw = {
+					__sveltekit_tch87m = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.BV2RXf8a.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.DhpPJKPi.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.BxaxoGM0.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.DYd4LyFj.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
