--- a/helpcenter.html
+++ b/helpcenter.html
@@ -8,24 +8,24 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.CyA2R6Xi.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.CKsQFK5Q.css" rel="stylesheet">
 		<link href="./app/immutable/assets/8.DiEg1B5W.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BxaxoGM0.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CjBVdPNf.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.BM0aGVnx.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.D-sYOhET.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.Bqgw9XGh.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.bsaCWKyC.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.DTevboXV.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.CZo4A-g6.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.DYd4LyFj.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DZ2zRgyD.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.Gtf1Dow8.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.0XGkgD3B.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.BdKW9F2k.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.BR3GzCIK.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CWK9BUt2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.CUk6MpOY.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.DxcUwLnM.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/8.DdRuVGoY.js"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1sug64l"><div class="corner svelte-1sug64l"><a href="./" class="svelte-1sug64l"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" class="svelte-1sug64l"></a></div> <div class="corner svelte-1sug64l"><br></div> <div class="w3-sidebar w3-bar-block w3-large sidebar-auto svelte-1sug64l" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1sug64l" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1sug64l" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1sug64l" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1sug64l" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1sug64l" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>Help Center</h1></div>  <div class="text-column"><p>We're here to assist you every step of the way! 
+		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-c8x8wi"><div class="corner svelte-c8x8wi"><a href="./" class="svelte-c8x8wi"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" class="svelte-c8x8wi"></a></div> <div class="corner svelte-c8x8wi"><br></div> <div class="w3-sidebar w3-bar-block w3-large sidebar-auto svelte-c8x8wi" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-c8x8wi" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-c8x8wi" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-c8x8wi" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-c8x8wi" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-c8x8wi" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>Help Center</h1></div>  <div class="text-column"><p>We're here to assist you every step of the way! 
 	Let's make your experience seamless!</p></div> <svg width="260" height="50"><rect id="box" x="0" y="0" width="100" height="20"></rect><text x="110" y="15" font-size="14" fill="white">FAQs</text></svg> <section><div class="text-column"><div class="container svelte-1aqgq3c"><h3>Frequently Asked Questions</h3> <details class="svelte-1aqgq3c"><summary class="svelte-1aqgq3c">Do you offer trading services?</summary> <div class="svelte-1aqgq3c">No. We are not an exchange and do not execute any trades.
 				Our focus is on delivering scientific solutions for investment analytics and 
 				actionable insights countering the asymmetries in financial markets. 
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_tch87m = {
+					__sveltekit_1nk30bc = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -61,8 +61,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.BxaxoGM0.js"),
-						import("./app/immutable/entry/app.DYd4LyFj.js")
+						import("./app/immutable/entry/start.BM0aGVnx.js"),
+						import("./app/immutable/entry/app.DZ2zRgyD.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
