--- a/404.html
+++ b/404.html
@@ -4,16 +4,17 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/alparslan-labs.github.io/favicon.png"/>
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<link rel="stylesheet" href="//use.fontawesome.com/releases/v6.7.0/css/all.css">
+		<!--<link rel="stylesheet" href="//use.fontawesome.com/releases/v6.7.0/css/all.css">-->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" type="text/css" />
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.D3g5O8Wg.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C6aRPTDk.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Bs8IPFEW.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.B_z7bOcg.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.Bqgw9XGh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.DySTPMbq.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.Bi8JtUQL.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.CZo4A-g6.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.D6veqVYg.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.abY1TfPU.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.Gtf1Dow8.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.0XGkgD3B.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.BdKW9F2k.js">
@@ -22,7 +23,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_tdyixm = {
+					__sveltekit_177y9i7 = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.D3g5O8Wg.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.D6veqVYg.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.Bs8IPFEW.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.abY1TfPU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
