--- a/helpcenter.html
+++ b/helpcenter.html
@@ -4,28 +4,29 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png"/>
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<link rel="stylesheet" href="//use.fontawesome.com/releases/v6.7.0/css/all.css">
+		<!--<link rel="stylesheet" href="//use.fontawesome.com/releases/v6.7.0/css/all.css">-->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" type="text/css" />
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.Bve0UQjr.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.2wP4b512.css" rel="stylesheet">
 		<link href="./app/immutable/assets/8.DiEg1B5W.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.D3g5O8Wg.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.C6aRPTDk.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Bs8IPFEW.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.B_z7bOcg.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.Bqgw9XGh.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.DySTPMbq.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.Bi8JtUQL.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.CZo4A-g6.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.D6veqVYg.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.abY1TfPU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.Gtf1Dow8.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.0XGkgD3B.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.BdKW9F2k.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CxSU_0p5.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.DWMIKTD-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.CUk6MpOY.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.DxcUwLnM.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/8.DdRuVGoY.js"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-j409dt"><div class="corner svelte-j409dt"><a href="./" class="svelte-j409dt"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" class="svelte-j409dt"></a></div> <div class="corner svelte-j409dt"><br> <div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-j409dt" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-j409dt" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-j409dt" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-j409dt" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-j409dt" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-j409dt" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>Help Center</h1></div>  <div class="text-column"><p>We're here to assist you every step of the way! 
+		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1d0ef4h"><div class="corner svelte-1d0ef4h"><a href="./" class="svelte-1d0ef4h"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" class="svelte-1d0ef4h"></a></div> <div class="corner svelte-1d0ef4h"><div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-1d0ef4h" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>Help Center</h1></div>  <div class="text-column"><p>We're here to assist you every step of the way! 
 	Let's make your experience seamless!</p></div> <svg width="260" height="50"><rect id="box" x="0" y="0" width="100" height="20"></rect><text x="110" y="15" font-size="14" fill="white">FAQs</text></svg> <section><div class="text-column"><div class="container svelte-1aqgq3c"><h3>Frequently Asked Questions</h3> <details class="svelte-1aqgq3c"><summary class="svelte-1aqgq3c">Do you offer trading services?</summary> <div class="svelte-1aqgq3c">No. We are not an exchange and do not execute any trades.
 				Our focus is on delivering scientific solutions for investment analytics and 
 				actionable insights countering the asymmetries in financial markets. 
@@ -53,7 +54,7 @@
 			
 			<script>
 				{
-					__sveltekit_tdyixm = {
+					__sveltekit_177y9i7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -61,8 +62,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.D3g5O8Wg.js"),
-						import("./app/immutable/entry/app.D6veqVYg.js")
+						import("./app/immutable/entry/start.Bs8IPFEW.js"),
+						import("./app/immutable/entry/app.abY1TfPU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
