--- a/HARP.html
+++ b/HARP.html
@@ -25,5 +25,28 @@ Profitability Engineered <div class="text-column"><h3>Asset Selectiion</h3> <p><
                 Our closed beta is invite-only, with limited spots available. 
                 Early access includes exclusive updates and rewards.</p></div> <div class="newsletter-container"><div class="icon">✉</div> <h1>Join Our Beta</h1> <p>Join the waitlist to secure your place and stay 
                 informed about the latest developments.</p> <br> <form action="mailto:alparlsan-labs@proton.me?subject=Beta" method="POST" enctype="text/plain"><input type="text" name="name" placeholder="Name" required> <input type="email" name="email" placeholder="E-Mail" required> <select id="products" name="product" style="height: 40px;"><option value="HARP" selected>HARP</option><option value="d4t">d4t</option></select> <br> <button type="submit">Join</button></form> <text class="beta-info" style="font-size: 10px;">*Joining the waitlist does not guaratee a beta seat.</text></div></div> <br></section><!----><!----></main> <footer class="svelte-1663mbs"><div class="footer-container svelte-1663mbs"><div class="footer-column svelte-1663mbs"><h3 class="svelte-1663mbs">Topics</h3> <ul class="svelte-1663mbs"><li class="svelte-1663mbs"><a href="./company" class="svelte-1663mbs">Company</a></li> <li class="svelte-1663mbs"><a href="./research" class="svelte-1663mbs">Research</a></li></ul></div> <div class="footer-column svelte-1663mbs"><h3 class="svelte-1663mbs">Products</h3> <ul class="svelte-1663mbs"><li class="svelte-1663mbs"><a href="./HARP" class="svelte-1663mbs">HARP</a></li> <li class="svelte-1663mbs"><a href="./QADR" class="svelte-1663mbs">QADR</a></li></ul></div> <div class="footer-column svelte-1663mbs"><h3 class="svelte-1663mbs">Company</h3> <ul class="svelte-1663mbs"><li class="svelte-1663mbs"><a href="./about" class="svelte-1663mbs">About</a></li> <li class="svelte-1663mbs"><a href="./codex" class="svelte-1663mbs">Codex</a></li></ul></div> <div class="footer-column svelte-1663mbs"><h3 class="svelte-1663mbs">Support</h3> <ul class="svelte-1663mbs"><li class="svelte-1663mbs"><a href="./helpcenter" class="svelte-1663mbs">Help Center</a></li> <li class="svelte-1663mbs"><a href="./contact" class="svelte-1663mbs">Contact</a></li></ul></div> <div class="footer-column svelte-1663mbs"><a href="./" class="svelte-1663mbs"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" width="25px"></a></div></div> <hr width="90%" size="1" noshade=""> <div class="footer-bottom svelte-1663mbs"><p><a href="https://github.com/alparslan-labs" aria-label="GitHub" class="svelte-1663mbs"><i class="fa fa-brands fa-github svelte-1663mbs"></i></a> <a href="https://x.com" aria-label="Twitter" class="svelte-1663mbs"><i class="fa fa-brands fa-x-twitter svelte-1663mbs"></i></a> <a href="https://x.com" aria-label="Facebook" class="svelte-1663mbs"><i class="fa fa-brands fa-facebook svelte-1663mbs"></i></a> <a href="https://linkedin.com" aria-label="LinkedIn" class="svelte-1663mbs"><i class="fa fa-brands fa-linkedin svelte-1663mbs"></i></a> <a href="https://github.com" aria-label="Telegram" class="svelte-1663mbs"><i class="fa fa-brands fa-telegram svelte-1663mbs"></i></a> <a href="https://github.com" aria-label="Instagram" class="svelte-1663mbs"><i class="fa fa-brands fa-instagram svelte-1663mbs"></i></a> <a href="https://svelte.dev/docs/kit" aria-label="Twitch" class="svelte-1663mbs"><i class="fa fa-brands fa-twitch svelte-1663mbs"></i></a> <a href="https://svelte.dev/docs/kit" aria-label="YouTube" class="svelte-1663mbs"><i class="fa fa-brands fa-youtube svelte-1663mbs"></i></a> <a href="https://svelte.dev/docs/kit" aria-label="TikTok" class="svelte-1663mbs"><i class="fa fa-brands fa-tiktok svelte-1663mbs"></i></a> <a href="https://svelte.dev/docs/kit" aria-label="Discord" class="svelte-1663mbs"><i class="fa fa-brands fa-discord svelte-1663mbs"></i></a></p> © 2025 YourCompany. All Rights Reserved.</div></footer></div><!----><!--]--> <!--[!--><!--]--><!--]--></div>
+	
+	
+	
+	<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container" style="height:100%;width:100%">
+  <div class="tradingview-widget-container__widget" style="height:calc(100% - 32px);width:100%"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
+  {
+  "autosize": true,
+  "symbol": "NASDAQ:AAPL",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "dark",
+  "style": "1",
+  "locale": "en",
+  "allow_symbol_change": true,
+  "calendar": false,
+  "support_host": "https://www.tradingview.com"
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
 	</body>
 </html>
