--- a/404.html
+++ b/404.html
@@ -9,12 +9,12 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Bs8IPFEW.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.B_z7bOcg.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.DYv18kvs.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C8XoMT6D.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.Bqgw9XGh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.Bi8JtUQL.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.Dfe8sNUZ.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.CZo4A-g6.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.abY1TfPU.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.DkMwQbVh.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.Gtf1Dow8.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.0XGkgD3B.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.BdKW9F2k.js">
@@ -23,7 +23,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_177y9i7 = {
+					__sveltekit_1c5r6zc = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.Bs8IPFEW.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.abY1TfPU.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.DYv18kvs.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.DkMwQbVh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
