--- a/QADR.html
+++ b/QADR.html
@@ -9,11 +9,11 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.2wP4b512.css" rel="stylesheet">
-		<link href="./app/immutable/assets/12.tn0RQdqM.css" rel="stylesheet"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
+		<link href="./app/immutable/assets/0.jAyskwv3.css" rel="stylesheet">
+		<link href="./app/immutable/assets/13.tn0RQdqM.css" rel="stylesheet"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1d0ef4h"><div class="corner svelte-1d0ef4h"><a href="./" class="svelte-1d0ef4h"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" class="svelte-1d0ef4h"></a></div> <div class="corner svelte-1d0ef4h"><div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-1d0ef4h" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1d0ef4h" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>QADR</h1></div> Optimize, Don't Gamble
+		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1q4g7a0"><div class="corner svelte-1q4g7a0"><a href="./" class="svelte-1q4g7a0"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" class="svelte-1q4g7a0"></a></div> <div class="corner svelte-1q4g7a0"><div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-1q4g7a0" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Portfolio"><i class="fa fa-pie-chart"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="ff"><i class="fa-solid fa-chart-line"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>QADR</h1></div> Optimize, Don't Gamble
 Optimizing for Outcomes
 Logic of Growth
 
@@ -23,7 +23,7 @@ Mathematics of Wealth
 Quantum Financial Edge
 Portfolio Redefined
 Next-Gen Investing
-Enhanced Risk Management <div class="text-column"><h3>Preprosessing</h3> <p>Populate financial time series with a single line of code.</p> <h3>Automate Strategy Research</h3> <p>Let algortihms generate trading strategies.</p> <pre>npx sv create</pre> <h3>Portfolio Optimization</h3> <p>Create robust portfolios that outperform market benchmarks in and out of sample.
+Enhanced Risk Management <div class="text-column"><h3>Preprosessing</h3> <p>Populate financial time series with a single line of code.</p> <h3>Preprosessing</h3> <p></p> <h3>Automate Strategy Research</h3> <p>Let algortihms generate trading strategies.</p> <pre>npx sv create</pre> <h3>Portfolio Optimization</h3> <p>Create robust portfolios that outperform market benchmarks in and out of sample.
         Get access to propietary machine learning approaches. Explore quantum advantage.</p> Get a custom demo. Discover the value of Vercel for your enterprise and explore our custom plans and pricing.
 
 	Set up your Enterprise trial. See for yourself how Vercel Enterprise speeds up your workflow &amp; impact.</div> <i class="fa-solid fa-dumbbell"></i> <i class="fa-solid fa-robot"></i> asset managers 
