--- a/blog.html
+++ b/blog.html
@@ -10,18 +10,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.f4kO-vmO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.kC-qYwwG.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.B0l7-rJu.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.gAQb1E-A.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.BvKeoxsW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.DuEvEFoe.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.6mW00jIh.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.Bz1RX4F5.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.Co7nedBq.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.D-mbmQae.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.0YPSeHIw.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/5.DVyZCRuW.js"><!--[--><meta name="description" content="Svelte demo app"><!--]--><title>Blog</title>
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ukjm1q = {
+					__sveltekit_zkhzo6 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -39,8 +39,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.kC-qYwwG.js"),
-						import("./app/immutable/entry/app.Bz1RX4F5.js")
+						import("./app/immutable/entry/start.gAQb1E-A.js"),
+						import("./app/immutable/entry/app.Co7nedBq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
