--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.gAQb1E-A.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BvKeoxsW.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Cc-Ifswg.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C5EfTux8.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.6mW00jIh.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.DgbCBAPj.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.Co7nedBq.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.CQX7YPGJ.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.Bt2SUrO2.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_zkhzo6 = {
+					__sveltekit_1ngbj98 = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.gAQb1E-A.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.Co7nedBq.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.Cc-Ifswg.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.CQX7YPGJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
