--- a/algopilot.html
+++ b/algopilot.html
@@ -10,21 +10,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.f4kO-vmO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.gAQb1E-A.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BvKeoxsW.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Cc-Ifswg.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.C5EfTux8.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.6mW00jIh.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.DgbCBAPj.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.Co7nedBq.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.CQX7YPGJ.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.0YPSeHIw.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CXy39s0h.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/4.DsfedSAR.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/4.oTWm4L-x.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/graphnetwork.PkMY6-Xw.js"><!--[--><meta name="description" content="test"><!--]--><title>Algopilot</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -37,7 +37,7 @@
 			
 			<script>
 				{
-					__sveltekit_zkhzo6 = {
+					__sveltekit_1ngbj98 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -45,8 +45,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.gAQb1E-A.js"),
-						import("./app/immutable/entry/app.Co7nedBq.js")
+						import("./app/immutable/entry/start.Cc-Ifswg.js"),
+						import("./app/immutable/entry/app.CQX7YPGJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
