--- a/blog.html
+++ b/blog.html
@@ -10,18 +10,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.f4kO-vmO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.Cc-Ifswg.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.C5EfTux8.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.VRrX-2fC.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.CoWkLR9-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.DgbCBAPj.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.C2leVqBB.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.CQX7YPGJ.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.yHs2jdg2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CXy39s0h.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.MqpT3HhZ.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/5.DVyZCRuW.js"><!--[--><meta name="description" content="Svelte demo app"><!--]--><title>Blog</title>
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ngbj98 = {
+					__sveltekit_yj654u = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -39,8 +39,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.Cc-Ifswg.js"),
-						import("./app/immutable/entry/app.CQX7YPGJ.js")
+						import("./app/immutable/entry/start.VRrX-2fC.js"),
+						import("./app/immutable/entry/app.yHs2jdg2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
