--- a/algopilot.html
+++ b/algopilot.html
@@ -10,21 +10,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.f4kO-vmO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.VRrX-2fC.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CoWkLR9-.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.D99Ax5Rh.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.C8-t1-du.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.C2leVqBB.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.1KIFF8Wd.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.yHs2jdg2.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.YrFQ1ydx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.MqpT3HhZ.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.Bun1kV5g.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/4.BVp1WtQR.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/4.DgLl3N0E.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/graphnetwork.PkMY6-Xw.js"><!--[--><meta name="description" content="test"><!--]--><title>Algopilot</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -37,7 +37,7 @@
 			
 			<script>
 				{
-					__sveltekit_yj654u = {
+					__sveltekit_1yk510z = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -45,8 +45,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.VRrX-2fC.js"),
-						import("./app/immutable/entry/app.yHs2jdg2.js")
+						import("./app/immutable/entry/start.D99Ax5Rh.js"),
+						import("./app/immutable/entry/app.YrFQ1ydx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
