--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.VRrX-2fC.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.CoWkLR9-.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.D99Ax5Rh.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C8-t1-du.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.C2leVqBB.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.1KIFF8Wd.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.yHs2jdg2.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.YrFQ1ydx.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.Bt2SUrO2.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_yj654u = {
+					__sveltekit_1yk510z = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.VRrX-2fC.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.yHs2jdg2.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.D99Ax5Rh.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.YrFQ1ydx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
